testsuite/tests/typecheck/should_fail/T17566c.stderr

T17566c.hs:11:23: error: [GHC-17370]
    • Different names for the same type variable:
        ‘k’ bound at T17566c.hs:10:17
        ‘k’ bound at T17566c.hs:11:23
    • In the class declaration for ‘C2’
